tests/snapshots/file@variable@collide_with_parameter.lox.snap
---
source: tests/common/mod.rs
description: "fun foo(a) {\n  var a; // Error at 'a': Already a variable with this name in this scope.\n}\n"
input_file: crafting_interpreters_test_files/variable/collide_with_parameter.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × variable with name 'a' is already defined in this scope
   ╭─[2:7]
 1 │ fun foo(a) {
 2 │   var a; // Error at 'a': Already a variable with this name in this scope.
   ·       ┬
   ·       ╰── here
 3 │ }
   ╰────
